# graphics-programming-workshops

./: README.md
intro-to-gp/: README.md  REQUIREMENTS.md
intro-to-gp/workshop_final/: CMakeLists.txt  main.cpp.backup0
intro-to-gp/workshop_final/assets/: vertex.glsl
intro-to-gp/workshop_final/src/: main.cpp
intro-to-gp/workshop_part0_starter/assets/: fragment.glsl  vertex.glsl
intro-to-gp/workshop_part0_starter/src/: main.cpp  vertex_data.h
intro-to-gp/workshop_part1_vertices/: CMakeLists.txt
intro-to-gp/workshop_part1_vertices/assets/: fragment.glsl  vertex.glsl
intro-to-gp/workshop_part1_vertices/src/: main.cpp
